--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -3,6 +3,10 @@
     <SwitchPreference
         android:defaultValue="false"
         android:title="Darkmode"
-        android:key="@string/Darkmode_pref"
+        android:key="darkmode_pref"
         android:summary="Turn Darkmode on"/>
+    <SwitchPreference
+        android:defaultValue="true"
+        android:title="Notifications"
+        android:key="notification_pref" />
 </PreferenceScreen>
