--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -29,7 +29,7 @@
                 android:text="Select Photo" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/name_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Name" />
@@ -43,7 +43,7 @@
                 android:inputType="textPersonName" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/ps_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ps" />
@@ -57,7 +57,7 @@
                 android:inputType="textPersonName" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/kilometres_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Kilometres" />
@@ -71,7 +71,7 @@
                 android:inputType="textPersonName" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/price_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Price" />
@@ -85,7 +85,7 @@
                 android:inputType="textPersonName" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/firstRegistration_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="First Registration" />
@@ -99,7 +99,7 @@
                 android:inputType="textPersonName" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/description_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Description" />
@@ -113,7 +113,7 @@
                 android:inputType="textPersonName" />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/telNumber_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Telnumber" />
@@ -127,7 +127,7 @@
                 android:inputType="textPersonName" />
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/location_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Location" />
