Raffael Suchbutton implementiert und Funktion dazu programiert.

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -12,15 +12,20 @@
         android:title="Settings"
         app:showAsAction="always" />
     <item
-        android:id="@+id/search_bar"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="Search"
-        app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always"></item>
-    <item
         android:id="@+id/priceInc"
         android:title="Preis Aufsteigend" />
     <item
+        android:id="@+id/search_bar"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Search"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/priceDesc"
         android:title="Preis Absteigend" />
+    <item
+        android:id="@+id/registrationInc"
+        android:title="Erstregistrierung Aufsteigend" />
+    <item
+        android:id="@+id/registrationDesc"
+        android:title="Erstregistrierung Absteigend" />
 </menu>
