Reiter Elias, added currency

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -81,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Price"
+                android:hint="Price in €"
                 android:inputType="textPersonName" />
 
             <TextView
