--- a/app/src/main/res/layout/activity_adapter.xml
+++ b/app/src/main/res/layout/activity_adapter.xml
@@ -27,6 +27,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:text="Car-Name"
+            android:textColor="#000000"
             android:textSize="25sp" />
 
         <LinearLayout
@@ -42,6 +43,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Price"
+                android:textColor="#000000"
                 android:textSize="25sp" />
         </LinearLayout>
     </LinearLayout>
