--- a/app/src/main/res/layout/activity_car_info.xml
+++ b/app/src/main/res/layout/activity_car_info.xml
@@ -22,51 +22,107 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Car name:" />
+
+            <TextView
                 android:id="@+id/name_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dip"
                 android:text="Name" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ps:" />
 
             <TextView
                 android:id="@+id/ps_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dip"
                 android:text="Ps" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Kilometres:" />
 
             <TextView
                 android:id="@+id/kilometres_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dip"
                 android:text="Kilometres" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Price:" />
 
             <TextView
                 android:id="@+id/price_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dip"
                 android:text="Price" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="First Registration:" />
 
             <TextView
                 android:id="@+id/firstRegistration_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dip"
                 android:text="First Registration" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Description:" />
 
             <TextView
                 android:id="@+id/description_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dip"
                 android:text="Description" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Telnumber:" />
 
             <TextView
                 android:id="@+id/telNumber_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dip"
                 android:text="Telnumber" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Loacation of the car:" />
 
             <TextView
                 android:id="@+id/location_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dip"
                 android:text="Location" />
 
         </LinearLayout>
