--- a/app/src/main/res/layout/activity_adapter.xml
+++ b/app/src/main/res/layout/activity_adapter.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="30px">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,18 +17,9 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="300px"
             android:layout_weight="1"
             tools:srcCompat="@tools:sample/avatars" />
-
-        <TextView
-            android:id="@+id/carName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:text="Car-Name"
-            android:textSize="25sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,12 +28,28 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/carName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="Car-Name"
+                android:textSize="25sp" />
+
+            <TextView
                 android:id="@+id/price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
                 android:text="Price"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/ps"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="PS"
                 android:textSize="25sp" />
         </LinearLayout>
     </LinearLayout>
