--- a/app/src/main/res/layout/activity_car_info.xml
+++ b/app/src/main/res/layout/activity_car_info.xml
@@ -25,105 +25,121 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Car name:" />
+                android:text="Car name:"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/name_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
-                android:text="Name" />
+                android:text="Name"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ps:" />
+                android:text="Ps:"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/ps_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
-                android:text="Ps" />
+                android:text="Ps"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Kilometres:" />
+                android:text="Kilometres:"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/kilometres_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
-                android:text="Kilometres" />
+                android:text="Kilometres"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Price:" />
+                android:text="Price:"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/price_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
-                android:text="Price" />
+                android:text="Price"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="First Registration:" />
+                android:text="First Registration:"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/firstRegistration_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
-                android:text="First Registration" />
+                android:text="First Registration"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Description:" />
+                android:text="Description:"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/description_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
-                android:text="Description" />
+                android:text="Description"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Telnumber:" />
+                android:text="Telnumber:"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/telNumber_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
-                android:text="Telnumber" />
+                android:text="Telnumber"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Loacation of the car:" />
+                android:text="Loacation of the car:"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/location_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
-                android:text="Location" />
+                android:text="Location"
+                android:textSize="20sp"/>
 
         </LinearLayout>
     </ScrollView>
