Ben activity_car_info bearbeitet, padding
activity_adapter.xml bearbeitet, padding

Such-Button bearbeitet, Farbe angepasst

--- a/app/src/main/res/layout/activity_car_info.xml
+++ b/app/src/main/res/layout/activity_car_info.xml
@@ -18,7 +18,8 @@
             <ImageView
                 android:id="@+id/carImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="400px"
+                android:padding="30px"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
