--- a/app/src/main/res/layout/activity_adapter.xml
+++ b/app/src/main/res/layout/activity_adapter.xml
@@ -18,6 +18,8 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="300px"
+            android:layout_marginEnd="20px"
+            android:layout_marginRight="20px"
             android:layout_weight="1"
             tools:srcCompat="@tools:sample/avatars" />
 
