--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -19,7 +19,8 @@
             <ImageView
                 android:id="@+id/carImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="400px"
+                android:layout_margin="20px"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <Button
