--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -14,7 +14,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginStart="15sp"
+            android:layout_marginLeft="15sp"
+            android:orientation="vertical"
+            android:paddingRight="15sp">
 
             <ImageView
                 android:id="@+id/carImage"
