--- a/app/src/main/res/layout/activity_car_info.xml
+++ b/app/src/main/res/layout/activity_car_info.xml
@@ -13,6 +13,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15sp"
+            android:layout_marginLeft="15sp"
             android:orientation="vertical">
 
             <ImageView
@@ -27,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Car name:"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/name_TextView"
@@ -35,14 +37,14 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
                 android:text="Name"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ps:"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/ps_TextView"
@@ -50,14 +52,14 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
                 android:text="Ps"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Kilometres:"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/kilometres_TextView"
@@ -65,14 +67,14 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
                 android:text="Kilometres"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Price:"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/price_TextView"
@@ -80,14 +82,14 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
                 android:text="Price"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="First Registration:"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/firstRegistration_TextView"
@@ -95,14 +97,14 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
                 android:text="First Registration"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Description:"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/description_TextView"
@@ -110,14 +112,14 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
                 android:text="Description"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Telnumber:"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/telNumber_TextView"
@@ -125,14 +127,14 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
                 android:text="Telnumber"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Loacation of the car:"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/location_TextView"
@@ -140,7 +142,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dip"
                 android:text="Location"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
         </LinearLayout>
     </ScrollView>
